unpackaged/main/default/objects/conference360__Event_Item__c/conference360__Event_Item__c.object-meta.xml
<CustomObject>
    <label>Event Item</label>
    <nameField>
        <displayFormat>EI-{000000}</displayFormat>
        <label>Event Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>