unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__BT_Form_Pre_Registration__c.field-meta.xml
<CustomField>
    <fullName>conference360__BT_Form_Pre_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Form (custom questions) specific to this item (ticket).</description>
    <inlineHelpText>The Form (custom questions) specific to this item (ticket).</inlineHelpText>
    <label>Form (Pre-Registration)</label>
    <referenceTo>bt_base__Form__c</referenceTo>
    <relationshipLabel>Event Items</relationshipLabel>
    <relationshipName>Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>