unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Disable_Contact_Lead_Matching__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_Contact_Lead_Matching__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field  to disable lead/contact insert.</inlineHelpText>
    <label>Disable Contact/Lead Matching</label>
    <type>Checkbox</type>
</CustomField>