unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Donation_Amounts2__c.field-meta.xml
<CustomField>
    <fullName>conference360__Donation_Amounts2__c</fullName>
    <description>Set one or more donation amounts to appear as checkout options.</description>
    <inlineHelpText>Set one or more donation amounts to appear as checkout options.</inlineHelpText>
    <label>Donation Amounts</label>
    <type>TextArea</type>
</CustomField>