unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Donation_Amounts__c.field-meta.xml
<CustomField>
    <fullName>conference360__Donation_Amounts__c</fullName>
    <description>Select one or more donation amounts to appear as checkout options.</description>
    <inlineHelpText>Select one or more donation amounts to appear as checkout options.</inlineHelpText>
    <label>Donation Amounts(Deprecated)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>