unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Email__c.field-meta.xml
<CustomField>
    <fullName>conference360__Email__c</fullName>
    <description>Make the Attendee&#39;s email optional, required or hidden during registration. Best practice would to leave this field as required unless the ticket is specifically for people who may not have an email address (children).</description>
    <inlineHelpText>Make the Attendee&#39;s email optional, required or hidden during registration. Best practice would to leave this field as required unless the ticket is specifically for people who may not have an email address (children).</inlineHelpText>
    <label>Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>