unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Free__c.field-meta.xml
<CustomField>
    <fullName>conference360__Free__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if the ticket is free. No need to define the Price field.</inlineHelpText>
    <label>Free</label>
    <type>Checkbox</type>
</CustomField>