unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__FullName__c.field-meta.xml
<CustomField>
    <fullName>conference360__FullName__c</fullName>
    <description>Make the Attendee&#39;s name optional, required or hidden during registration. Best practice would to leave this field as required.</description>
    <inlineHelpText>Make the Attendee&#39;s name optional, required or hidden during registration. Best practice would to leave this field as required.</inlineHelpText>
    <label>Full Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>