unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Key__c.field-meta.xml
<CustomField>
    <fullName>conference360__Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Indexed key field used in Event Urls. It must be unique and is generated by triggers if it is blank.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>