unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>conference360__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payment Gateway through which this line item will be processed when completing payment. If blank, the default Payment Gateway for the Event will be used.</description>
    <inlineHelpText>Populate to specify which Payment Gateway will be used when processing payment during an Event registration.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Event Items</relationshipLabel>
    <relationshipName>Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>