unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Phone_Label__c.field-meta.xml
<CustomField>
    <fullName>conference360__Phone_Label__c</fullName>
    <inlineHelpText>Override the Phone label.</inlineHelpText>
    <label>Phone Label(Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>