unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Price_Control__c.field-meta.xml
<CustomField>
    <fullName>conference360__Price_Control__c</fullName>
    <description>Used to set dynamic pricing for the identified Events user. Values must match the Contact&#39;s Events Price Control field.</description>
    <inlineHelpText>Used to set dynamic pricing for the identified Events user. Values must match the Contact&#39;s Events Price Control field.</inlineHelpText>
    <label>Price Control</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Non-member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>