unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Sales_End_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sales_End_Date__c</fullName>
    <description>The date sales for this item end.</description>
    <inlineHelpText>The date sales for this item end.</inlineHelpText>
    <label>Sales End Date</label>
    <type>Date</type>
</CustomField>