unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Sales_End_Time__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sales_End_Time__c</fullName>
    <description>The time sales for this item end, using the event&#39;s time zone.</description>
    <inlineHelpText>The time sales for this item end, using the event&#39;s time zone.</inlineHelpText>
    <label>Sales End Time</label>
    <type>Time</type>
</CustomField>