unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Sales_Start_Date_Time_GMT__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sales_Start_Date_Time_GMT__c</fullName>
    <description>Sales date of the event in GMT. Set automatically. Not to be manually updated</description>
    <inlineHelpText>Start date of the event in GMT.</inlineHelpText>
    <label>Sales Start Date/Time</label>
    <type>DateTime</type>
</CustomField>