unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Salutation__c.field-meta.xml
<CustomField>
    <fullName>conference360__Salutation__c</fullName>
    <description>Make the Attendee&#39;s Salutation optional, required or hidden during registration.</description>
    <inlineHelpText>Make the Attendee&#39;s Salutation optional, required or hidden during registration.</inlineHelpText>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
                <default>true</default>
                <label>Hide</label>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>