unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Status__c.field-meta.xml
<CustomField>
    <fullName>conference360__Status__c</fullName>
    <inlineHelpText>The status of this ticket. Set the status to &quot;On Sale&quot; when you are ready for people to purchase this ticket.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>On Sale</fullName>
            </value>
            <value>
                <fullName>Sold Out</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>