unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>conference360__Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, no tax will be applied for this item. If false, the tax designated on the event will apply.</description>
    <inlineHelpText>If true, no tax will be applied for this item. If false, the tax designated on the event will apply.</inlineHelpText>
    <label>Tax-Exempt</label>
    <type>Checkbox</type>
</CustomField>