unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>conference360__Tax_Rate__c</fullName>
    <inlineHelpText>Set the tax rate for the Event Item.</inlineHelpText>
    <label>Tax Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>