unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Type__c</fullName>
    <inlineHelpText>Define if the ticket is for the overall event or for a specific session. Specific Session/Other ticket types will be supported soon.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main event ticket</fullName>
                <default>true</default>
                <label>Main event ticket</label>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>